--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "http-proxy-middleware": "^2.0.6",
-    "morgan": "^1.10.0"
+    "hbs": "^4.2.0",
+    "morgan": "^1.10.0",
+    "serve-static": "^1.15.0"
   }
 }
