--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "hbs": "^4.2.0",
-    "morgan": "^1.10.0",
-    "serve-static": "^1.15.0"
+    "morgan": "^1.10.0"
   }
 }
